--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </fieldset>
         </form>
         <footer>
-
+            <input type="button" value="Salvar" form="main-form">
         </footer>
     </div>
 </body>
