--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         <footer>
             <input type="button" value="Salvar" form="main-form">
         </footer>
+        <aside>
+            <p>Criado por <a href="">Matheus Tavares Viana</a></p>
+        </aside>
     </div>
 </body>
 </html>
