finalizado reformatação e melhoria de semantica do css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" href="image/form-svgrepo-com.svg">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/pattern.css">
     <link rel="stylesheet" href="css/style.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Staatliches&display=swap" rel="stylesheet">
@@ -85,7 +84,7 @@
             <input type="button" value="Salvar" form="main-form">
         </footer>
         <aside>
-            <p>Criado por <a href="">Matheus Tavares Viana</a></p>
+            <p>Criado por <a href="https://github.com/matheuzeba/" target="_blank">Matheus Tavares Viana</a></p>
         </aside>
     </div>
 </body>
