--- a/index.html
+++ b/index.html
@@ -61,23 +61,46 @@
 
             <!-- Seus horários disponíveis -->
             <fieldset>
-                <section class="fieldset-wrapper">
+                <section class="fieldset-wrapper col-3-wrapper">
                     <legend>Seus horários disponíveis</legend>
                     <section class="col-3">
+
                         <section class="input-wrapper">
-                            <label for="event-data">Data <span>(DD/MM/AAAA)</span> </label>
-                            <input type="date" id="event-data">
+                            <section class="sub-legend">
+                                <legend>Primeira mentoria</legend>
+                            </section>
+                            <label for="event-data-primeiro">Data <span>(DD/MM/AAAA)</span> </label>
+                            <input type="date" id="event-data-primeiro">
                         </section>
                         <section class="input-wrapper">
-                            <label for="event-inicio">Das</label>
-                            <input type="time" id="event-inicio">
+                            <label for="event-inicio-primeiro">Das</label>
+                            <input type="time" id="event-inicio-primeiro">
                         </section>
                         <section class="input-wrapper">
-                            <label for="event-fim">Até</label>
-                            <input type="time" id="event-fim">
+                            <label for="event-fim-primeiro">Até</label>
+                            <input type="time" id="event-fim-primeiro">
+                        </section>
+                    </section>
+                    <section class="col-3">
+
+                        <section class="input-wrapper">
+                            <section class="sub-legend">
+                                <legend>Segunda mentoria</legend>
+                            </section>
+                            <label for="event-data-segundo">Data <span>(DD/MM/AAAA)</span> </label>
+                            <input type="date" id="event-data-segundo">
+                        </section>
+                        <section class="input-wrapper">
+                            <label for="event-inicio-segundo">Das</label>
+                            <input type="time" id="event-inicio-segundo">
+                        </section>
+                        <section class="input-wrapper">
+                            <label for="event-fim-segundo">Até</label>
+                            <input type="time" id="event-fim-segundo">
                         </section>
                     </section>
                 </section>
+                
             </fieldset>
         </form>
         <footer>
